# ParametricCAD

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  bootstrap.ps1  bootstrap.sh  vcpkg.json
.github/workflows/: ci-linux.yml  ci-windows.yml  ci.yml  docs.yml
LICENSES/ThirdPartyLicenses/cppAD/: LICENSE
LICENSES/ThirdPartyLicenses/occt/: OCCT_LGPL_EXCEPTION.txt
cmake/: CompilerFlags.cmake  Docs.cmake  VendorCppAD.cmake  VendorOCCT.cmake
docs/: requirements.txt  venv-setup.ps1  venv-setup.sh
docs/sphinx/: api.rst  conf.py  index.rst
src/: CMakeLists.txt  main.cpp
src/geometry/: OcctUtils.cpp  OcctUtils.hpp
src/io/: StepExporter.cpp  StepExporter.hpp  StlExporter.cpp  StlExporter.hpp
tests/: CMakeLists.txt
tests/geometry/: CMakeLists.txt  test_primitives.cpp
tests/io/: CMakeLists.txt  test_step_export.cpp  test_stl_export.cpp
tests/math/: CMakeLists.txt  test_cppad.cpp
